--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "@angular/platform-browser": "~8.2.7",
     "@angular/platform-browser-dynamic": "~8.2.7",
     "@angular/router": "~8.2.7",
+    "@syncfusion/ej2-angular-buttons": "^17.3.27",
+    "@syncfusion/ej2-angular-schedule": "^17.3.27",
+    "@syncfusion/ej2-material-theme": "~17.3.26",
+    "bootstrap": "^4.3.1",
+    "ngx-bootstrap": "^5.2.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
