--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@syncfusion/ej2-material-theme": "~17.3.26",
     "bootstrap": "^4.3.1",
     "ngx-bootstrap": "^5.2.0",
+    "octicons": "^8.5.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
